[gd_scene format=3 uid="uid://tcc34gjo21sg"]

[ext_resource type="Script" uid="uid://b5vq3lgr83w5p" path="res://scripts/enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://bpf2twgeweu4g" path="res://assets/icon.svg" id="1_7k104"]
[ext_resource type="PackedScene" uid="uid://bc6862ehmgnwd" path="res://scenes/projectile.tscn" id="2_qi2p4"]
[ext_resource type="PackedScene" uid="uid://c65ut4j8wt130" path="res://scenes/hurtbox.tscn" id="4_iifgy"]
[ext_resource type="Script" uid="uid://d0w5wjhjrfer3" path="res://scenes/health.gd" id="5_c4w8v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gyqm"]
size = Vector2(128, 128)

[node name="Enemy" type="CharacterBody2D" unique_id=1933005539]
script = ExtResource("1_4gyqm")
projectile_prefab = ExtResource("2_qi2p4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=715340586]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_4gyqm")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=204274576]
texture = ExtResource("1_7k104")

[node name="Timer" type="Timer" parent="." unique_id=571211622]
autostart = true

[node name="Hurtbox" parent="." unique_id=1790943287 instance=ExtResource("4_iifgy")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" unique_id=398976146]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_4gyqm")

[node name="EnemyHealth" type="Node" parent="." unique_id=1385907226]
script = ExtResource("5_c4w8v")
max_health = 2.0
metadata/_custom_type_script = "uid://d0w5wjhjrfer3"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="on_damaged" from="Hurtbox" to="." method="_on_damaged"]
[connection signal="on_death" from="EnemyHealth" to="." method="_on_death"]
